refactor(credential-manager): remove unused class and methods, add consistent comments